--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,14 @@
+body,
+html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    overflow: hidden;
+    font-family: sans-serif;
+}
 :root {
+
+    --fontsize: 1rem;
     --color-bg: #1d1c1a;
     --color-text: #ccc;
 
